# orbit

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  documentation_improvement_report.md
docs/00-glossary/: glossary.md
docs/01-overview/: assumptions_constraints.md  project_scope.md  success_criteria.md
docs/02-architecture/: dataflow.md  llm_operator_guide.md  modules_inventory.md  system_diagram.md  workspace_layout.md
docs/03-config/: config_reconciliation.md  config_schema.yaml  cutoffs_timezones.md  env_keys.md  sample_config.yaml
docs/04-data-sources/: alpaca_news_ws.md  gemini_sentiment_api.md  identifiers_mapping.md  rate_limits.md  reddit_api.md  reddit_arctic_api.md  stooq_prices.md  tos_compliance.md
docs/05-ingestion/: bootstrap_historical_data.md  llm_batching_gemini.md  news_alpaca_ws_ingest.md  prices_stooq_ingest.md  scheduler_jobs.md  social_reddit_ingest.md  storage_layout_parquet.md
docs/06-preprocessing/: deduplication_novelty.md  mapping_rules_cashtags_keywords.md  quality_filters_social.md  time_alignment_cutoffs.md
docs/07-features/: news_features.md  price_features.md  social_features.md  standardization_scaling.md
docs/08-modeling/: fusion_gated_blend.md  heads_price_news_social.md  hyperparams_tuning.md  targets_labels.md  training_walkforward.md
docs/09-evaluation/: ablations_checklist.md  acceptance_gates.md  backtest_rules.md  (+9 more)
tests/: test_ingest_news_backfill.py  test_ingest_prices.py  test_ingest_social.py  test_io.py  test_preprocess.py
(+55 files in other folders)
