[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.1.0"
description = "ORBIT - Options Research Based on Integrated Textual data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.25.0,<2",
    "pandas>=2.2.0,<3",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "pendulum>=2.2.2",
    "scikit-learn>=1.3.0",
    "google-generativeai>=0.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

parquet = [
    "pyarrow>=12.0.0,<13",
    "fastparquet>=2024.0.0",
]

[project.scripts]
orbit = "orbit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=orbit --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
